# webgpu-shader-toy

./: .gitignore  CMakeLists.txt  CopyResource.cmake  README.md
src/cpp/: Application.cpp  Application.h  Errors.h  FragmentShader.cpp  FragmentShader.h  FragmentShaderExamples.cpp  FragmentShaderWindow.cpp  FragmentShaderWindow.h  GPU.cpp  GPU.h  MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  Model.h  Preferences.cpp  Preferences.h  ShaderWindow.cpp  ShaderWindow.h  State.h  fmt.h  main.cpp  version.h.in
src/cpp/gpu/: GPU.cpp  GPU.h  ImGuiWindow.cpp  ImGuiWindow.h  Renderable.h  Window.cpp  Window.h
src/cpp/gui/: Dialog.cpp  Dialog.h  WstGui.cpp  WstGui.h
src/cpp/utils/: Clock.h  DataManager.cpp  DataManager.h  JSStorage.cpp  Storage.h  UndoManager.cpp  UndoManager.h
src/js/: lib_wgpu_shader_toy.js
src/resources/emscripten/: shell.html
src/resources/shaders/: Fire.wgsl  Marble.wgsl  Shader Art 1.wgsl  Shader Art 2.wgsl
